# soma_ur5

./: .gitignore  .project  .pydevproject  CMakeLists.txt  README.md  package.xml
Arduino Teleop 2/paletta_hand_v2/: paletta_hand_v2.ino
Arduino Teleop/paletta_hand_v2/: paletta_hand_v2.ino  sub_main_code.ino
action/: SOMAFramework.action
cfg/: dyn_ur5_controller.cfg  dyn_ur5_hand.cfg  dyn_ur5_haptic.cfg  dyn_ur5_model.params
config/: soft_hand_controllers.yaml  soma_teleop.rviz  ur5_gazebo_control.yaml  ur5_gazebo_controllers.yaml  ur5_settings.yaml
include/soma_ur5/: chb.h  controller.h  gazebo_bridge.h  grasp_feedback.h  haptic.h  haptic_guidance.h  lp_filter.h  meshgrid.hpp  teleimpedance.h  ur5_controller_main.h  ur5_model.h  ur5_motion.h  ur5_motion_kdl.h  ur5_motion_manual.h  utils.h
launch/: ati_bridge.launch  com_haptic.launch  com_interactive.launch  com_leap.launch  everything.launch  icra_teleop.launch  real_hw.launch  start_sim.launch  ur5_control_gazebo.launch  ur5_gazebo.launch  ur5_replay.launch  ur5_robot.launch  wearhap.launch
matlab/teleop_analysis/: EM.m  EM_init_kmeans.m  EM_init_regularTiming.m  GMR.m  GradientBasedPlanner_3D.m  PotentialFieldScript.m  PotentialFieldScript_3D.m  PotentialFieldScript_3D_old.m  PotentialFieldScript_new.m  ROS_traj.m  axes_plot.m  bic.m  cluster_dataset.m  cpp_trial.m  cube_model.m  cube_model.mat  cyl_data.mat  cyl_model.m  cyl_model.mat  enhance_dataset.m  ft_paletta2baselink.m  hollow_model.m  hollow_model.mat  main.m  ori_ctrl.m  plotGMR_frame.m  plot_comparison.m  plottami.m  scoop_teleop.txt  sphere_model.m  sphere_model.mat  teleop_analysis.m  time_warp.m  traj_gen.m  untitled.m
matlab/teleop_analysis/data/: scoop_teleop_2020-07-17-12-07-59.bag.box_pose.txt  scoop_teleop_2020-07-17-12-07-59.bag.cmd_gripper.txt  scoop_teleop_2020-07-17-12-07-59.bag.ft.txt  scoop_teleop_2020-07-17-12-07-59.bag.js.txt  scoop_teleop_2020-07-17-12-07-59.bag.pose.txt  scoop_teleop_2020-07-17-15-44-03.bag.box_pose.txt  scoop_teleop_2020-07-17-15-44-03.bag.cmd_gripper.txt  scoop_teleop_2020-07-17-15-44-03.bag.ft.txt  scoop_teleop_2020-07-17-15-44-03.bag.js.txt  scoop_teleop_2020-07-17-15-44-03.bag.pose.txt  scoop_teleop_2020-07-17-15-48-07.bag.box_pose.txt  scoop_teleop_2020-07-17-15-48-07.bag.cmd_gripper.txt  scoop_teleop_2020-07-17-15-48-07.bag.ft.txt  scoop_teleop_2020-07-17-15-48-07.bag.js.txt  scoop_teleop_2020-07-17-15-48-07.bag.pose.txt  scoop_teleop_2020-07-22-17-46-40.bag.box_pose.txt  scoop_teleop_2020-07-22-17-46-40.bag.cmd_gripper.txt  scoop_teleop_2020-07-22-17-46-40.bag.ft.txt  scoop_teleop_2020-07-22-17-46-40.bag.js.txt  scoop_teleop_2020-07-22-17-46-40.bag.pose.txt  scoop_teleop_2020-07-22-17-54-24.bag.box_pose.txt  scoop_teleop_2020-07-22-17-54-24.bag.cmd_gripper.txt  scoop_teleop_2020-07-22-17-54-24.bag.ft.txt  scoop_teleop_2020-07-22-17-54-24.bag.js.txt  scoop_teleop_2020-07-22-17-54-24.bag.pose.txt  scoop_teleop_2020-07-22-17-58-23.bag.box_pose.txt  scoop_teleop_2020-07-22-17-58-23.bag.cmd_gripper.txt  scoop_teleop_2020-07-22-17-58-23.bag.ft.txt  scoop_teleop_2020-07-22-17-58-23.bag.js.txt  scoop_teleop_2020-07-22-17-58-23.bag.pose.txt  scoop_teleop_2020-07-22-18-18-14.bag.box_pose.txt  scoop_teleop_2020-07-22-18-18-14.bag.cmd_gripper.txt  (+19 more)
robot/: ee_attachments.xacro  load_desc.launch  soma.urdf  ur5_soma.urdf.xacro
scoop_msgs/: CMakeLists.txt  package.xml
scoop_msgs/msg/: Scoop.msg
scripts/: GMRScoopGrasp.py  control1.py  external_dist.py  move_interactive.py  soma_icra.py  soma_sm.py  test_move.py  top_grasp_iros.py  ur5MoveScoop.py
src/: ati_bridge.cpp  collisions.cpp  controller.cpp  fingers_teleop.cpp  gazebo_bridge.cpp  haptic.cpp  haptic_band.cpp  haptic_guidance.cpp  haptic_old.cpp  leap_commander.cpp  leap_commander.cpp.unused  pisa_hand_bridge.cpp  pisa_hand_bridge.cpp.unused  soma_framework.cpp  ur5_controller_main.cpp  ur5_model.cpp  utils.cpp
srv/: ch_mapping.srv
(+22 files in other folders)
