<?xml version="1.0"?>
<package>
  <name>scoop_msgs</name>
  <version>0.0.1</version>
  <description>The scoop_msgs package</description>
  
  <author email="glusia@rpi.edu">Andrew Glusiec</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <maintainer email="fxm@ipa.fhg.de">Felix Messmer</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>


  <license>TODO</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
  </export>
</package>
